# fricas-obsolete

./: .nojekyll  Makefile.in  README.rst  citation.html  configure  configure.ac  contribute.html  contributors.html  development.html  download.html  examples.html  faq.html  features.html  genindex.html  help.html  history.html  index.html  install.html  objects.inv  search.html  searchindex.js  spadstyleguide.html  tftextest.pl
_sources/: download.rst.txt  faq.rst.txt  features.rst.txt  index.rst.txt
_static/: classic.css  documentation_options.js
api/: AbelianGroup.html  AbelianMonoid.html  AbelianMonoidRing.html  AbelianProductCategory.html  AbelianSemiGroup.html  Aggregate.html  AlgFactor.html  Algebra.html  AlgebraGivenByStructuralConstants.html  AlgebraPackage.html  AlgebraicFunction.html  AlgebraicFunctionField.html  AlgebraicHermiteIntegration.html  AlgebraicIntegrate.html  AlgebraicIntegrate2.html  AlgebraicIntegration.html  AlgebraicManipulations.html  AlgebraicMultFact.html  AlgebraicNumber.html  AlgebraicallyClosedField.html  AlgebraicallyClosedFunctionSpace.html  AnonymousFunction.html  AntiSymm.html  Any.html  AnyFunctions1.html  ApplyRules.html  ApplyUnivariateSkewPolynomial.html  Approximate.html  ArcHyperbolicFunctionCategory.html  ArcTrigonometricFunctionCategory.html  ArrayStack.html  AssociatedEquations.html  AssociatedJordanAlgebra.html  AssociatedLieAlgebra.html  AssociationList.html  AssociationListAggregate.html  AttachPredicates.html  Automorphism.html  BagAggregate.html  BalancedBinaryTree.html  (+1187 more)
config/: axiom-c-macros.h.in
contrib/emacs/: Makefile.in  fricas.el
src/algebra/: 1d.spad  Makefile.in  aggcat.spad  algebra2d.spad.pamphlet  boolean.spad.pamphlet  catdef.spad  computation.spad.pamphlet  exposed.lsp.pamphlet  formula.spad  formula.spad.pamphlet  gdpoly.spad  graph.spad.pamphlet  html.spad.pamphlet  integer.spad.pamphlet  kl.spad.pamphlet  lispex.spad.pamphlet  mathjax.spad  mathml.spad.pamphlet  matrix.spad.pamphlet  naalgc.spad  numtheor.spad  oftool.spad.pamphlet  ophandl.spad  out.spad  outboot.spad.pamphlet  outform.spad.pamphlet  perm.spad  poly.spad  sex.spad.pamphlet  smith2.spad  sups.spad  tex.spad  tex.spad.pamphlet  tex1.spad  texmacs.spad.pamphlet  xhash.spad
src/doc/: Makefile.in  api.spad  book.tex  fricas.sty  fricasmath.sty  ht.awk  htex2input.awk  literatedoc.awk  literatedoc.sty  syscmd.awk  tecintro.tex
src/doc/ht/: HTXAdvPage3.ht  HTXAdvPage5.ht  util.ht
src/doc/htex/: BBTREE.htex  DFLOAT.htex  FR.htex  LEXP.htex  LEXTRIPK.htex  OP.htex  QUAT2.htex  REGSET.htex  XPOLY.htex  ZDSOLVE.htex  ug00.htex  ug01.htex  ug02.htex  ug03.htex  ug04.htex  ug05.htex  ug06.htex  ug07.htex  ug08.htex  ug10.htex  ug11.htex  ug12.htex  ug13.htex  ug15.htex  ug16.htex
src/doc/sphinx/: Makefile
src/doc/sphinx/source/: conf.py  contribute.rst  debian.rst  development.rst  download.rst  examples.rst  faq.rst  help.rst  index.rst  install.rst
src/hyper/pages/: graphics.ht
src/input/: textest.input
src/interp/: ax.boot  ax.boot.tex  g-error.boot  i-analy.boot  i-output.boot  i-syscmd.boot  msgdb.boot  setvars.boot  setvart.boot  trace.boot
src/lib/: sockio-c.c
src/test/: Makefile.am  Makefile.compile  README  build-setup.sh  clean-setup.sh  configure.ac  deps.pl  i-bugs2010.input.pamphlet  list.input.pamphlet  set.input.pamphlet  spadunit.spad.pamphlet  string.input.pamphlet  xhashdbg.input.pamphlet  xhashdebug.spad.pamphlet  xhashtable.input.pamphlet
